@@ -1,5 +1,10 @@
 Note that while the version # is still in the 0.0.x range, the interface may change arbitrarily while we figure out the best simplest convenientest powerfullest way to arrange things
 
+h2. Version 0.0.6 2010-04-05
+
+* configliere/define and configliere/config_file are included by default.
+* fixed a bug when ENV['HOME'] is missing (running as root)
+
 h2. Version 0.0.4 2010-01-16
 
 * Cured a variety of issues noted by "@monad":http://github.com/monad -- thanks for the feedback!
